--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An app that helps users post their salon businesses and services and customers can book appointments with them",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server -a localhost -p 8000 -c-1"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/andela-sadelokiki/salonApp/issues"
   },
-  "homepage": "https://github.com/andela-sadelokiki/salonApp"
+  "homepage": "https://github.com/andela-sadelokiki/salonApp",
+  "dependencies": {
+    "http-server": "^0.8.0"
+  }
 }
