--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.1"
+    "angular": "~1.4.1",
+    "angular-route": "~1.4.2",
+    "angular-loading-bar": "~0.8.0"
   }
 }
